# AoC_2024

./: .gitignore  Cargo.toml
days/day1/: Cargo.toml
days/day2/: Cargo.toml
days/day2/src/: day2.rs
days/day3/: Cargo.toml
days/day3/src/: day3.rs
days/day4/: Cargo.toml
days/day4/src/: day4.rs
days/day5/: Cargo.toml
days/day5/src/: day5.rs
days/day6/: Cargo.toml
days/day6/src/: day6.rs
days/day7/: Cargo.toml
days/day7/src/: part1.rs  part2.rs
days/day8/: Cargo.toml
days/day8/src/: part1.rs  part2.rs
days/day9/: Cargo.toml
days/day9/src/: part1.rs
src/utils/: mod.rs
utils/src/: utils.rs
