[workspace]
resolver = "2"

members = [ "days/day1",
            "days/day2",
            "days/day3",
            "days/day4",
            "days/day5",
            "days/day6", "days/day7",
            "utils"]
default-members = ["days/day*"]


[workspace.dependencies]
regex = "1.11.1"
itertools = "0.14.0"
utils = { path = "./utils" }
